--- a/public/glyphicons.css
+++ b/public/glyphicons.css
@@ -35,3 +35,4 @@
 .glyphicon-warning-sign:before { content: "\e107"; }
 .glyphicon-minus:before { content: "\2212"; }
 .glyphicon-plus:before { content: "\002b"; }
+.glyphicon-import:before { content: "\e197"; }
