--- a/src/components/CommandEditor/CommandEditor.css
+++ b/src/components/CommandEditor/CommandEditor.css
@@ -67,13 +67,13 @@
 .robo-cmd-editor .robo-cmd-menu-bar .pause-all,
 .robo-cmd-editor .robo-cmd-menu-bar .resume-all,
 .robo-cmd-editor .robo-cmd-menu-bar .stop-all,
-.robo-cmd-editor .robo-cmd-menu-bar .import-btn {
+.robo-cmd-editor .robo-cmd-menu-bar .latex-btn {
     transition: opacity 0.15s ease-out;
 }
 
-/* Hide delete and import when collapsed */
+/* Hide delete and latex when collapsed */
 .robo-cmd-editor.collapsed .delete-all,
-.robo-cmd-editor.collapsed .import-btn {
+.robo-cmd-editor.collapsed .latex-btn {
     display: none !important;
 }
 
@@ -204,9 +204,8 @@ font-size: 20px;
     border-left: 1px solid #A5A5A5;
 }
 
-.robo-cmd-menu-bar .stop-all{
+.robo-cmd-menu-bar .latex-btn{
     border-right: none;
-
 }
 
 
